--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Almaitu</string>
+    <string name="dcComics">DC</string>
+    <string name="marvel">Marvel</string>
+    <string name="manga">Manga</string>
+    <string name="image">Image</string>
+    <string name="dark">Dark</string>
+    <string name="vertigo">Vertigo</string>
 </resources>
