--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="aviso">LA MAYORIA DE LOS LINKS EN ESTA APP SON TOMADOS DE OTRAS FUENTES CUALQUIER PROBLEMAS</string>
     <string name="aviso2">CON LOS LINKS DUDAS O SUGERENCIAS MANDAR UN CORREO A carlitox_r20_banana@hotmail.com</string>
     <string name="otros">Otros</string>
+    <string name="abrir">OPEN/ABRIR</string>
 </resources>
