--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="aviso2">CON LOS LINKS DUDAS O SUGERENCIAS MANDAR UN CORREO A carlitox_r20_banana@hotmail.com</string>
     <string name="otros">Otros</string>
     <string name="abrir">OPEN/ABRIR</string>
+    <string name="recomendacione">RECOMENDACIONES</string>
+    <string name="masreco">MAS RECOMENDACIONES</string>
+    <string name="Categorias">CATEGORIAS</string>
 </resources>
