--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,6 @@
     <string name="recomendacione">RECOMENDACIONES</string>
     <string name="masreco">MAS RECOMENDACIONES</string>
     <string name="Categorias">CATEGORIAS</string>
+    <string name="Multi">Multi</string>
+    <string name="anime">Anime</string>
 </resources>
